--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="category">
         <h2 onclick="toggleSubcategories(this)">1. Exterior & Interior Plasters</h2>
         <div class="subcategory">
-            <a href="https://jmp.sh/s/bqq8S2RT3WYsyx3OSvwz" target="_blank">Tek-Plast AC Plus</a>
+            <a href="path/to/Tek-Plast_AC_Plus.pdf" target="_blank">Tek-Plast AC Plus</a>
             <a href="path/to/Tek-Plast_AC.pdf" target="_blank">Tek-Plast AC</a>
             <a href="path/to/Tek-Plast_CL.pdf" target="_blank">Tek-Plast CL</a>
             <a href="path/to/Tek-Plast_CP.pdf" target="_blank">Tek-Plast CP</a>
