--- a/index.html
+++ b/index.html
@@ -56,7 +56,173 @@
         </div>
     </div>
 
-    <!-- Continue for all other categories -->
+    <div class="category">
+        <h2 onclick="toggleSubcategories(this)">5. Release Agents</h2>
+        <div class="subcategory">
+            <a href="path/to/Tek-Release UR.pdf" target="_blank">Tek-Release UR</a>
+            <a href="path/to/Tek-Release WB.pdf" target="_blank">Tek-Release WB</a>
+            <a href="path/to/Tek-Tard SR.pdf" target="_blank">Tek-Tard SR</a>
+        </div>
+    </div>
+
+    <div class="category">
+        <h2 onclick="toggleSubcategories(this)">6. Concrete Repairs</h2>
+        <div class="subcategory">
+            <a href="path/to/Tek-Crete CFC.pdf" target="_blank">Tek-Crete CFC</a>
+            <a href="path/to/Tek-Crete CPC.pdf" target="_blank">Tek-Crete CPC</a>
+            <a href="path/to/Tek-Crete CR.pdf" target="_blank">Tek-Crete CR</a>
+            <a href="path/to/Tek-Crete EFC.pdf" target="_blank">Tek-Crete EFC</a>
+            <a href="path/to/Tek-Crete EGP.pdf" target="_blank">Tek-Crete EGP</a>
+            <a href="path/to/Tek-Crete EMH.pdf" target="_blank">Tek-Crete EMH</a>
+            <a href="path/to/Tek-Crete FL.pdf" target="_blank">Tek-Crete FL</a>
+            <a href="path/to/Tek-Crete FR.pdf" target="_blank">Tek-Crete FR</a>
+            <a href="path/to/Tek-Crete LW.pdf" target="_blank">Tek-Crete LW</a>
+            <a href="path/to/Tek-Crete MC.pdf" target="_blank">Tek-Crete MC</a>
+            <a href="path/to/Tek-Crete MCH.pdf" target="_blank">Tek-Crete MCH</a>
+            <a href="path/to/Tek-Crete SCR.pdf" target="_blank">Tek-Crete SCR</a>
+            <a href="path/to/Tek-Crete TRM.pdf" target="_blank">Tek-Crete TRM</a>
+        </div>
+    </div>
+
+    <div class="category">
+        <h2 onclick="toggleSubcategories(this)">7. Structural Grouts</h2>
+        <div class="subcategory">
+            <a href="path/to/Tek-Grout AG.pdf" target="_blank">Tek-Grout AG</a>
+            <a href="path/to/Tek-Grout CG.pdf" target="_blank">Tek-Grout CG</a>
+            <a href="path/to/Tek-Grout EP.pdf" target="_blank">Tek-Grout EP</a>
+            <a href="path/to/Tek-Grout HS.pdf" target="_blank">Tek-Grout HS</a>
+            <a href="path/to/Tek-Grout IR.pdf" target="_blank">Tek-Grout IR</a>
+            <a href="path/to/Tek-Grout LE.pdf" target="_blank">Tek-Grout LE</a>
+            <a href="path/to/Tek-Grout NSG.pdf" target="_blank">Tek-Grout NSG</a>
+            <a href="path/to/Tek-Grout PG.pdf" target="_blank">Tek-Grout PG</a>
+            <a href="path/to/Tek-Grout WR.pdf" target="_blank">Tek-Grout WR</a>
+        </div>
+    </div>
+
+    <div class="category">
+        <h2 onclick="toggleSubcategories(this)">8. Tile Adhesives & Grouts</h2>
+        <div class="subcategory">
+            <a href="path/to/Tek-Glue MBL.pdf" target="_blank">Tek-Glue MBL</a>
+            <a href="path/to/Tek-Grout AFG.pdf" target="_blank">Tek-Grout AFG</a>
+            <a href="path/to/Tek-Grout EG.pdf" target="_blank">Tek-Grout EG</a>
+            <a href="path/to/Tek-Grout GP.pdf" target="_blank">Tek-Grout GP</a>
+            <a href="path/to/Tek-Grout WJ.pdf" target="_blank">Tek-Grout WJ</a>
+            <a href="path/to/Tek-Grout WP.pdf" target="_blank">Tek-Grout WP</a>
+            <a href="path/to/Tek-Tile ATA.pdf" target="_blank">Tek-Tile ATA</a>
+            <a href="path/to/Tek-Tile EP.pdf" target="_blank">Tek-Tile EP</a>
+            <a href="path/to/Tek-Tile GCU.pdf" target="_blank">Tek-Tile GCU</a>
+            <a href="path/to/Tek-Tile GP.pdf" target="_blank">Tek-Tile GP</a>
+            <a href="path/to/Tek-Tile NS.pdf" target="_blank">Tek-Tile NS</a>
+            <a href="path/to/Tek-Tile TT.pdf" target="_blank">Tek-Tile TT</a>
+            <a href="path/to/Tek-Tile WPS.pdf" target="_blank">Tek-Tile WPS</a>
+        </div>
+    </div>
+
+    <div class="category">
+    <h2 onclick="toggleSubcategories(this)">9. Flooring</h2>
+    <div class="subcategory">
+        <!-- Subcategory: Cementitious System -->
+        <h3 onclick="toggleSubcategories(this)">a. Cementitious System</h3>
+        <div class="sub-subcategory">
+            <a href="path/to/Tek-Floor FHQ.pdf" target="_blank">Tek-Floor FHQ</a>
+            <a href="path/to/Tek-Floor FHS.pdf" target="_blank">Tek-Floor FHS</a>
+            <a href="path/to/Tek-Floor SL 10-30.pdf" target="_blank">Tek-Floor SL 10-30</a>
+            <a href="path/to/Tek-Floor SL 10-40.pdf" target="_blank">Tek-Floor SL 10-40</a>
+            <a href="path/to/Tek-Floor SL 10-70.pdf" target="_blank">Tek-Floor SL 10-70</a>
+            <a href="path/to/Tek-Floor SL HS.pdf" target="_blank">Tek-Floor SL HS</a>
+            <a href="path/to/Tek-Floor SL.pdf" target="_blank">Tek-Floor SL</a>
+            <a href="path/to/Tek-Screed 20 C.pdf" target="_blank">Tek-Screed 20 C - new</a>
+            <a href="path/to/Tek-Screed 30 C.pdf" target="_blank">Tek-Screed 30 C - new</a>
+            <a href="path/to/Tek-Screed 40 C.pdf" target="_blank">Tek-Screed 40 C - new</a>
+            <a href="path/to/Tek-Screed 50 C.pdf" target="_blank">Tek-Screed 50 C - new 2</a>
+            <a href="path/to/Tek-Screed LTW.pdf" target="_blank">Tek-Screed LTW</a>
+        </div>
+
+        <!-- Subcategory: Resin System -->
+        <h3 onclick="toggleSubcategories(this)">b. Resin System</h3>
+        <div class="sub-subcategory">
+            <a href="path/to/Tek-Grip Aggregate.pdf" target="_blank">Tek-Grip Aggregate</a>
+            <a href="path/to/Tek-Inlay Crystal.pdf" target="_blank">Tek-Inlay Crystal</a>
+            <a href="path/to/Tek-Floor Deck.pdf" target="_blank">Tek-Floor Deck</a>
+            <a href="path/to/Tek-Floor FHL.pdf" target="_blank">Tek-Floor FHL</a>
+            <a href="path/to/Tek-Floor PU.pdf" target="_blank">Tek-Floor PU</a>
+            <a href="path/to/Tek-Floor SB.pdf" target="_blank">Tek-Floor SB</a>
+            <a href="path/to/Tek-Floor SF.pdf" target="_blank">Tek-Floor SF</a>
+            <a href="path/to/Tek-Floor UVR.pdf" target="_blank">Tek-Floor UVR</a>
+            <a href="path/to/Tek-Floor WB.pdf" target="_blank">Tek-Floor WB</a>
+            <a href="path/to/Tek-Screed ES Epoxy Screed.pdf" target="_blank">Tek-Screed ES Epoxy Screed</a>
+            <a href="path/to/Tek-Screed PU Screed.pdf" target="_blank">Tek-Screed PU Screed</a>
+            <a href="path/to/Tek-Screed SS PU Topping.pdf" target="_blank">Tek-Screed SS PU Topping</a>
+            <a href="path/to/Tek-Screed SS.pdf" target="_blank">Tek-Screed SS</a>
+            <a href="path/to/Tek-Screed SS1.pdf" target="_blank">Tek-Screed SS1</a>
+            <a href="path/to/Tek-Seal SF.pdf" target="_blank">Tek-Seal SF</a>
+        </div>
+    </div>
+</div>
+
+    <div class="category">
+        <h2 onclick="toggleSubcategories(this)">10. Protective Coatings</h2>
+        <div class="subcategory">
+            <a href="path/to/Tek-Coat AC.pdf" target="_blank">Tek-Coat AC</a>
+            <a href="path/to/Tek-Coat CR.pdf" target="_blank">Tek-Coat CR</a>
+            <a href="path/to/Tek-Coat HB.pdf" target="_blank">Tek-Coat HB</a>
+            <a href="path/to/Tek-Coat UVR.pdf" target="_blank">Tek-Coat UVR</a>
+            <a href="path/to/Tek-Coat WB.pdf" target="_blank">Tek-Coat WB</a>
+            <a href="path/to/Tek-Coat WP.pdf" target="_blank">Tek-Coat WP</a>
+            <a href="path/to/Tek-Coat WR.pdf" target="_blank">Tek-Coat WR</a>
+        </div>
+    </div>
+
+    <div class="category">
+        <h2 onclick="toggleSubcategories(this)">11. Sealants</h2>
+        <div class="subcategory">
+            <a href="path/to/Tek-Fill JM.pdf" target="_blank">Tek-Fill JM</a>
+            <a href="path/to/Tek-Seal AR.pdf" target="_blank">Tek-Seal AR</a>
+            <a href="path/to/Tek-Seal PS.pdf" target="_blank">Tek-Seal PS</a>
+            <a href="path/to/Tek-Seal PU.pdf" target="_blank">Tek-Seal PU</a>
+        </div>
+    </div>
+
+    <div class="category">
+        <h2 onclick="toggleSubcategories(this)">12. Waterproofing</h2>
+        <div class="subcategory">
+            <a href="path/to/Tek-Flex RW.pdf" target="_blank">Tek-Flex RW</a>
+            <a href="path/to/Tek-Flex RWX.pdf" target="_blank">Tek-Flex RWX</a>
+            <a href="path/to/Tek-Plug WP.pdf" target="_blank">Tek-Plug WP</a>
+            <a href="path/to/Tek-Prufe CCW.pdf" target="_blank">Tek-Prufe CCW</a>
+            <a href="path/to/Tek-Prufe CF.pdf" target="_blank">Tek-Prufe CF</a>
+            <a href="path/to/Tek-Prufe CW.pdf" target="_blank">Tek-Prufe CW</a>
+            <a href="path/to/Tek-Prufe HS.pdf" target="_blank">Tek-Prufe HS</a>
+            <a href="path/to/Tek-Prufe PU.pdf" target="_blank">Tek-Prufe PU</a>
+            <a href="path/to/Tek-Prufe PUF.pdf" target="_blank">Tek-Prufe PUF</a>
+        </div>
+    </div>
+
+    <div class="category">
+        <h2 onclick="toggleSubcategories(this)">13. Primers, Thinners & Cleaners</h2>
+        <div class="subcategory">
+            <a href="path/to/Tek-Clean RC.pdf" target="_blank">Tek-Clean RC</a>
+            <a href="path/to/Tek-Inlay Primer.pdf" target="_blank">Tek-Inlay Primer</a>
+            <a href="path/to/Tek-Prime AC.pdf" target="_blank">Tek-Prime AC</a>
+            <a href="path/to/Tek-Prime AR.pdf" target="_blank">Tek-Prime AR</a>
+            <a href="path/to/Tek-prime PU.pdf" target="_blank">Tek-prime PU</a>
+            <a href="path/to/Tek-Prime SB.pdf" target="_blank">Tek-Prime SB</a>
+            <a href="path/to/Tek-Prime SF.pdf" target="_blank">Tek-Prime SF</a>
+            <a href="path/to/Tek-Prime ZR.pdf" target="_blank">Tek-Prime ZR</a>
+            <a href="path/to/Tek-Wash PR.pdf" target="_blank">Tek-Wash PR</a>
+        </div>
+    </div>
+
+    <div class="category">
+        <h2 onclick="toggleSubcategories(this)">14. Miscellaneous</h2>
+        <div class="subcategory">
+            <a href="path/to/Spraytek Gypsum Powder.pdf" target="_blank">Spraytek Gypsum Powder</a>
+            <a href="path/to/Tek-Backing Rod.pdf" target="_blank">Tek-Backing Rod</a>
+            <a href="path/to/Tek-Bond GJC.pdf" target="_blank">Tek-Bond GJC</a>
+            <a href="path/to/Tek-Fill ST.pdf" target="_blank">Tek-Fill ST</a>
+            <a href="path/to/Tek-Prufe Geotex.pdf" target="_blank">Tek-Prufe Geotex</a>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
