--- a/contact.html
+++ b/contact.html
@@ -15,14 +15,14 @@
     <!-- Embed the animated video -->
     <div class="video-container">
         <video width="600" controls autoplay loop>
-            <source src="path/to/your/contact-video.mp4" type="video/mp4">
+            <source src="path/your/contact-video.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
 
     <!-- Add other contact details if necessary -->
     <footer>
-        <p>For more information, contact us at: <a href="mailto:example@example.com">example@example.com</a></p>
+        <p>For more information, contact us at: <a href="mailto:hareesh@spraytek.ae">hareesh[at]spraytek.ae</a></p>
     </footer>
 
     <script src="script.js"></script>
