--- a/contact.html
+++ b/contact.html
@@ -13,12 +13,9 @@
     </header>
 
     <!-- Embed the animated video -->
-    <div class="video-container">
-        <video width="600" controls autoplay loop>
-            <source src="path/your/contact-video.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-    </div>
+   <div class="video-container">
+   <img src="path/your/contact-video.gif" alt="Description of GIF" class="responsive-gif">
+</div>
 
     <!-- Add other contact details if necessary -->
     <footer>
