--- a/Products/prod.html
+++ b/Products/prod.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Showcase</title>
     <link rel="stylesheet" href="productstylin.css">
-    <link rel="stylesheet" href="styles.css"><!-- Link to the CSS file -->
+    <link rel="stylesheet" href="../styles.css"><!-- Link to the CSS file -->
 </head>
 
 <body>
