--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1>Product Catalogs</h1>
         <!-- Add a link to the contact page -->
         <nav>
-            <a href="contact.html">Contact Me</a>
+            <a href="contact.html">Contact Me to place Order</a>
         </nav>
     </header>
 
