--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h2 onclick="toggleSubcategories(this)">1. Exterior & Interior Plasters</h2>
         <div class="subcategory">
             <!-- <a href="path/to/Tek-Plast AC Plus.pdf" target="_blank">Tek-Plast AC Plus</a> -->
-            <a href="Products/prod.html?product=productC">Tek-Plast AC Plus</a>
+            <a href="Products/prod.html?product=productB">Tek-Plast AC Plus</a>
             <a href="path/to/Tek-Plast AC.pdf" target="_blank">Tek-Plast AC</a>
             <a href="path/to/Tek-Plast CL.pdf" target="_blank">Tek-Plast CL</a>
             <a href="path/to/Tek-Plast CP.pdf" target="_blank">Tek-Plast CP</a>
