--- a/index.html
+++ b/index.html
@@ -30,10 +30,16 @@
         <h2 onclick="toggleSubcategories(this)">1. Exterior & Interior Plasters</h2>
         <div class="subcategory">
             <!-- <a href="path/to/Tek-Plast AC Plus.pdf" target="_blank">Tek-Plast AC Plus</a> -->
-            <a href="Products/prod.html?product=productB">Tek-Plast AC Plus</a>
-            <a href="path/to/Tek-Plast AC.pdf" target="_blank">Tek-Plast AC</a>
+            <!-- <a href="path/to/Tek-Plast AC.pdf" target="_blank">Tek-Plast AC</a>
             <a href="path/to/Tek-Plast CL.pdf" target="_blank">Tek-Plast CL</a>
             <a href="path/to/Tek-Plast CP.pdf" target="_blank">Tek-Plast CP</a>
+            <a href="path/to/Tek-Plast GP.pdf" target="_blank">Tek-Plast GP</a>
+            <a href="path/to/Tek-Plast HP.pdf" target="_blank">Tek-Plast HP</a>
+            <a href="path/to/Thermosit Mortar C.pdf" target="_blank">Thermosit Mortar C</a> -->
+            <a href="Products/prod.html?product=product1">Tek-Plast AC Plus</a>
+            <a href="Products/prod.html?product=product2">Tek-Plast AC</a>
+            <a href="Products/prod.html?product=product3">Tek-Plast CL</a>
+            <a href="Products/prod.html?product=product4">Tek-Plast CP</a>
             <a href="path/to/Tek-Plast GP.pdf" target="_blank">Tek-Plast GP</a>
             <a href="path/to/Tek-Plast HP.pdf" target="_blank">Tek-Plast HP</a>
             <a href="path/to/Thermosit Mortar C.pdf" target="_blank">Thermosit Mortar C</a>
