Update index.html spelling

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         <div class="subcategory">
             <a href="path/to/Spraytek Gypsum Powder.pdf" target="_blank">Spraytek Gypsum Powder</a>
             <a href="path/to/Tek-Backing Rod.pdf" target="_blank">Tek-Backing Rod</a>
-            <a href="path/to/Tek-Bond GJC.pdf" target="_blank">Tek-Bond GJC</a>
+            <a href="path/to/Tek-Bond GJC.pdf" target="_blank">Tek-Bond GJC(Gypsum Joint Compound)</a>
             <a href="path/to/Tek-Fill ST.pdf" target="_blank">Tek-Fill ST</a>
             <a href="path/to/Tek-Prufe Geotex.pdf" target="_blank">Tek-Prufe Geotex</a>
         </div>
