--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
         <h2 onclick="toggleSubcategories(this)">3. Pre-plaster Mortars</h2>
         <div class="subcategory">
             <a href="path/to/Tek-Bind CHB.pdf" target="_blank">Tek-Bind CHB</a>
-            <a href="path/to/Tek-Bind RC.pdf" target="_blank">Tek-Bind RC</a>
+            <!-- <a href="path/to/Tek-Bind RC.pdf" target="_blank">Tek-Bind RC</a> -->
+            <a href="Products/prod.html?product=product14">Tek-Bind RC</a>
             <a href="path/to/Tek-Bond LCB.pdf" target="_blank">Tek-Bond LCB</a>
         </div>
     </div>
@@ -239,7 +240,7 @@
         <div class="subcategory">
             <a href="path/to/Spraytek Gypsum Powder.pdf" target="_blank">Spraytek Gypsum Powder</a>
             <a href="path/to/Tek-Backing Rod.pdf" target="_blank">Tek-Backing Rod</a>
-            <a href="path/to/Tek-Bond GJC.pdf" target="_blank">Tek-Bond GJC(Gypsum Joint Compound)</a>
+            <a href="path/to/Tek-Bond GJC.pdf" target="_blank">Tek-Bond GJC (Gypsum Joint Compound)</a>
             <a href="path/to/Tek-Fill ST.pdf" target="_blank">Tek-Fill ST</a>
             <a href="path/to/Tek-Prufe Geotex.pdf" target="_blank">Tek-Prufe Geotex</a>
         </div>
