--- a/index.html
+++ b/index.html
@@ -126,17 +126,21 @@
         <div class="subcategory">
             <a href="path/to/Tek-Glue MBL.pdf" target="_blank">Tek-Glue MBL</a>
             <a href="path/to/Tek-Grout AFG.pdf" target="_blank">Tek-Grout AFG</a>
-            <a href="path/to/Tek-Grout EG.pdf" target="_blank">Tek-Grout EG</a>
+            <!-- <a href="path/to/Tek-Grout EG.pdf" target="_blank">Tek-Grout EG</a> -->
+            <a href="Products/prod.html?product=product46">Tek-Grout EG</a>
             <a href="path/to/Tek-Grout GP.pdf" target="_blank">Tek-Grout GP</a>
             <a href="path/to/Tek-Grout WJ.pdf" target="_blank">Tek-Grout WJ</a>
             <a href="path/to/Tek-Grout WP.pdf" target="_blank">Tek-Grout WP</a>
             <a href="path/to/Tek-Tile ATA.pdf" target="_blank">Tek-Tile ATA</a>
             <a href="path/to/Tek-Tile EP.pdf" target="_blank">Tek-Tile EP</a>
             <a href="path/to/Tek-Tile GCU.pdf" target="_blank">Tek-Tile GCU</a>
-            <a href="path/to/Tek-Tile GP.pdf" target="_blank">Tek-Tile GP</a>
+            <!-- <a href="path/to/Tek-Tile GP.pdf" target="_blank">Tek-Tile GP</a> -->
+            <a href="Products/prod.html?product=product53">Tek-Tile GP</a>
             <a href="path/to/Tek-Tile NS.pdf" target="_blank">Tek-Tile NS</a>
             <a href="path/to/Tek-Tile TT.pdf" target="_blank">Tek-Tile TT</a>
             <a href="path/to/Tek-Tile WPS.pdf" target="_blank">Tek-Tile WPS</a>
+            <!-- <a href="path/to/Tek-Tile HP.pdf" target="_blank">Tek-Tile HP</a> -->
+            <a href="Products/prod.html?product=product57">Tek-Tile HP</a>
         </div>
     </div>
 
@@ -240,7 +244,8 @@
         <div class="subcategory">
             <a href="path/to/Spraytek Gypsum Powder.pdf" target="_blank">Spraytek Gypsum Powder</a>
             <a href="path/to/Tek-Backing Rod.pdf" target="_blank">Tek-Backing Rod</a>
-            <a href="path/to/Tek-Bond GJC.pdf" target="_blank">Tek-Bond GJC (Gypsum Joint Compound)</a>
+            <!-- <a href="path/to/Tek-Bond GJC.pdf" target="_blank">Tek-Bond GJC (Gypsum Joint Compound)</a> -->
+            <a href="Products/prod.html?product=product116">Tek-Bond GJC (Gypsum Joint Compound)</a>
             <a href="path/to/Tek-Fill ST.pdf" target="_blank">Tek-Fill ST</a>
             <a href="path/to/Tek-Prufe Geotex.pdf" target="_blank">Tek-Prufe Geotex</a>
         </div>
