products added studo

--- a/index.html
+++ b/index.html
@@ -246,7 +246,8 @@
             <a href="path/to/Tek-Backing Rod.pdf" target="_blank">Tek-Backing Rod</a>
             <!-- <a href="path/to/Tek-Bond GJC.pdf" target="_blank">Tek-Bond GJC (Gypsum Joint Compound)</a> -->
             <a href="Products/prod.html?product=product116">Tek-Bond GJC (Gypsum Joint Compound)</a>
-            <a href="path/to/Tek-Fill ST.pdf" target="_blank">Tek-Fill ST</a>
+            <!-- <a href="path/to/Tek-Fill ST.pdf" target="_blank">Tek-Fill ST</a> -->
+            <a href="Products/prod.html?product=product117">Tek-Fill ST</a>
             <a href="path/to/Tek-Prufe Geotex.pdf" target="_blank">Tek-Prufe Geotex</a>
         </div>
     </div>
